updated MSSM106 with TNseq

--- a/notebook/2018-10-26-MSSM106-control-indiv/2018-10-26-MSSM106-control-indiv.Rmd
+++ b/notebook/2018-10-26-MSSM106-control-indiv/2018-10-26-MSSM106-control-indiv.Rmd
@@ -28,8 +28,7 @@ source("../../src/vcf.R")
 Import VCF for each caller (separately for SNVs and indels) and store only the called variants' identity by position.
 
 ```{r cache=TRUE}
-callers <- c("somaticSniper", "strelka2Germline2s", "strelka2Somatic")
-#callers <- c("lofreqSomatic", "somaticSniper", "strelka2Germline2s", "strelka2Somatic", "TNseq")
+callers <- c("somaticSniper", "strelka2Germline2s", "strelka2Somatic", "TNseq")
 names(callers) <- sub("T(n|N)seq", "T\\1seq.Mutect2", callers)
 vartypes <- c("snvs", "indels")
 names(vartypes) <- vartypes
