tiny touch to San Diego presentation

--- a/presentations/2018-10-29-bsm-meeting-vmc/2018-10-29-bsm-meeting-vmc.tex
+++ b/presentations/2018-10-29-bsm-meeting-vmc/2018-10-29-bsm-meeting-vmc.tex
@@ -53,11 +53,11 @@
 \begin{itemize}
 \item
 brain sample \tikz[baseline=-0.5ex] \draw[->] (0,0) -- node[above] (A)
-{NeuN+, HiSeq, align} (4.0,0); \texttt{neuron.bam}
+{NeuN+, PCR-free, HiSeq, align} (4.5,0); \texttt{neuron.bam}
 \includegraphics[width=0.7\textwidth]{figures/bsm-science-fig2.jpg}
 \item<2->
 muscle sample \tikz[baseline=-0.5ex] \draw[->] (0,0) -- node[above] (A)
-{HiSeq, align} (3.5,0); \texttt{muscle.bam}
+{PCR-free, HiSeq, align} (4.5,0); \texttt{muscle.bam}
 \end{itemize}
 \item<3->
 \begin{itemize}
