--- a/presentations/2018-10-29-bsm-meeting-vmc/two-vcfs.tex
+++ b/presentations/2018-10-29-bsm-meeting-vmc/two-vcfs.tex
@@ -1,8 +1,12 @@
-\normalsize
-\texttt{TNseq.Mutect2.vcf}
 \tiny
-\begin{tabular}{llllllll}
-\#CHROM & POS & ID & REF & ALT & QUAL & FILTER & INFO \\
+\setlength{\tabcolsep}{3pt}
+\begin{tabular}{|l|llllllll|}
+\hline
+\footnotesize label &
+\multicolumn{8}{|c|}{\footnotesize annotations: \texttt{TNseq.Mutect2.vcf}} \\
+\hline
+\(y_{\cdot,1}\) & \#CHROM & POS & ID & REF & ALT & QUAL & FILTER & INFO \\
+\textcolor{cyan}{0} &
 \textcolor{cyan}{1} &
 \textcolor{cyan}{50003788} &
 \textcolor{cyan}{0} &
@@ -11,22 +15,25 @@
 \textcolor{cyan}{0} &
 \textcolor{cyan}{t\_lod\_fstar} &
 \textcolor{cyan}{...;NLOD=30.4;TLOD=4.62} \\
-\textcolor{cyan!50!brown}{1} &
-\textcolor{cyan!50!brown}{50005034} &
+\bfseries \textcolor{cyan!50!brown}{1} &
+\bfseries \textcolor{cyan!50!brown}{1} &
+\bfseries \textcolor{cyan!50!brown}{50005034} &
+\bfseries \textcolor{cyan!50!brown}{0} &
+\bfseries \textcolor{cyan!50!brown}{G} &
+\bfseries \textcolor{cyan!50!brown}{T} &
+\bfseries \textcolor{cyan!50!brown}{0} &
+\bfseries \textcolor{cyan!50!brown}{t\_lod\_fstar} &
+\bfseries \textcolor{cyan!50!brown}{...;NLOD=33.27;TLOD=4.51} \\
+\bfseries \textcolor{cyan!50!brown}{1} &
+\bfseries \textcolor{cyan!50!brown}{1} &
+\bfseries \textcolor{cyan!50!brown}{50007349} &
+\bfseries \textcolor{cyan!50!brown}{0} &
+\bfseries \textcolor{cyan!50!brown}{C} &
+\bfseries \textcolor{cyan!50!brown}{T} &
+\bfseries \textcolor{cyan!50!brown}{0} &
+\bfseries \textcolor{cyan!50!brown}{PASS} &
+\bfseries \textcolor{cyan!50!brown}{...;NLOD=23.43;TLOD=10.97} \\
 \textcolor{cyan!50!brown}{0} &
-\textcolor{cyan!50!brown}{G} &
-\textcolor{cyan!50!brown}{T} &
-\textcolor{cyan!50!brown}{0} &
-\textcolor{cyan!50!brown}{t\_lod\_fstar} &
-\textcolor{cyan!50!brown}{...;NLOD=33.27;TLOD=4.51} \\
-\textcolor{cyan!50!brown}{1} &
-\textcolor{cyan!50!brown}{50007349} &
-\textcolor{cyan!50!brown}{0} &
-\textcolor{cyan!50!brown}{C} &
-\textcolor{cyan!50!brown}{T} &
-\textcolor{cyan!50!brown}{0} &
-\textcolor{cyan!50!brown}{PASS} &
-\textcolor{cyan!50!brown}{...;NLOD=23.43;TLOD=10.97} \\
 \textcolor{cyan}{1} &
 \textcolor{cyan}{50008565} &
 \textcolor{cyan}{0} &
@@ -35,22 +42,27 @@
 \textcolor{cyan}{0} &
 \textcolor{cyan}{PASS} &
 \textcolor{cyan}{...;NLOD=7.69;TLOD=8.26} \\
+\hline
 % \vdots & \vdots & \vdots & \vdots & \vdots & \vdots & \vdots & \vdots & \vdots & \vdots & \vdots \\
 \end{tabular}
-\\[1em]
-\normalsize
-\texttt{strelka2Somatic.vcf}
 \tiny
-\begin{tabular}{llllllll}
-\#CHROM & POS & ID & REF & ALT & QUAL & FILTER & INFO \\
-\textcolor{brown}{1} &
-\textcolor{brown}{50003323} &
+\\[1em]
+\begin{tabular}{|l|llllllll|}
+\hline
+\footnotesize label &
+\multicolumn{8}{|c|}{\footnotesize annotations: \texttt{strelka2Somatic.vcf}} \\
+\hline
+\(y_{\cdot,2}\) & \#CHROM & POS & ID & REF & ALT & QUAL & FILTER & INFO \\
+\bfseries \textcolor{brown}{1} &
+\bfseries \textcolor{brown}{1} &
+\bfseries \textcolor{brown}{50003323} &
+\bfseries \textcolor{brown}{0} &
+\bfseries \textcolor{brown}{A} &
+\bfseries \textcolor{brown}{G} &
+\bfseries \textcolor{brown}{0} &
+\bfseries \textcolor{brown}{LowEVS} &
+\bfseries \textcolor{brown}{...;DP=274;MQ=59.86;...;SomaticEVS=0} \\
 \textcolor{brown}{0} &
-\textcolor{brown}{A} &
-\textcolor{brown}{G} &
-\textcolor{brown}{0} &
-\textcolor{brown}{LowEVS} &
-\textcolor{brown}{...;DP=274;MQ=59.86;...;SomaticEVS=0} \\
 \textcolor{brown}{1} &
 \textcolor{brown}{50003455} &
 \textcolor{brown}{0} &
@@ -58,23 +70,26 @@
 \textcolor{brown}{T} &
 \textcolor{brown}{0} &
 \textcolor{brown}{LowEVS} &
-\textcolor{brown}{...;DP=226;MQ=59.9;...;SomaticEVS=0.65} \\
-\textcolor{cyan!50!brown}{1} &
-\textcolor{cyan!50!brown}{50005034} &
-\textcolor{cyan!50!brown}{0} &
-\textcolor{cyan!50!brown}{G} &
-\textcolor{cyan!50!brown}{T} &
-\textcolor{cyan!50!brown}{0} &
-\textcolor{cyan!50!brown}{PASS} &
-\textcolor{cyan!50!brown}{...;DP=278;MQ=59.95;...;SomaticEVS=9.04} \\
-\textcolor{cyan!50!brown}{1} &
-\textcolor{cyan!50!brown}{50007349} &
-\textcolor{cyan!50!brown}{0} &
-\textcolor{cyan!50!brown}{C} &
-\textcolor{cyan!50!brown}{T} &
-\textcolor{cyan!50!brown}{0} &
-\textcolor{cyan!50!brown}{LowEVS} &
-\textcolor{cyan!50!brown}{...;DP=192;MQ=59.88;...;SomaticEVS=4.19} \\
+\bfseries \textcolor{brown}{...;DP=226;MQ=59.9;...;SomaticEVS=0.65} \\
+\bfseries \textcolor{brown}{1} &
+\bfseries \textcolor{cyan!50!brown}{1} &
+\bfseries \textcolor{cyan!50!brown}{50005034} &
+\bfseries \textcolor{cyan!50!brown}{0} &
+\bfseries \textcolor{cyan!50!brown}{G} &
+\bfseries \textcolor{cyan!50!brown}{T} &
+\bfseries \textcolor{cyan!50!brown}{0} &
+\bfseries \textcolor{cyan!50!brown}{PASS} &
+\bfseries \textcolor{cyan!50!brown}{...;DP=278;MQ=59.95;...;SomaticEVS=9.04} \\
+\bfseries \textcolor{brown}{1} &
+\bfseries \textcolor{cyan!50!brown}{1} &
+\bfseries \textcolor{cyan!50!brown}{50007349} &
+\bfseries \textcolor{cyan!50!brown}{0} &
+\bfseries \textcolor{cyan!50!brown}{C} &
+\bfseries \textcolor{cyan!50!brown}{T} &
+\bfseries \textcolor{cyan!50!brown}{0} &
+\bfseries \textcolor{cyan!50!brown}{LowEVS} &
+\bfseries \textcolor{cyan!50!brown}{...;DP=192;MQ=59.88;...;SomaticEVS=4.19} \\
+\hline
 % \vdots & \vdots & \vdots & \vdots & \vdots & \vdots & \vdots & \vdots & \vdots & \vdots & \vdots \\
 \end{tabular}
 % ##INFO=<ID=SomaticEVS,Number=1,Type=Float,Description="Somatic Empirical
