--- a/presentations/2018-10-29-bsm-meeting-vmc/2018-10-29-bsm-meeting-vmc.tex
+++ b/presentations/2018-10-29-bsm-meeting-vmc/2018-10-29-bsm-meeting-vmc.tex
@@ -17,9 +17,9 @@
 
 % beamer styles
 \mode<presentation>{
-%\usetheme{Warsaw}
-\usetheme{Pittsburgh}
-\usecolortheme{beaver}
+\usetheme{Singapore}
+%\usetheme{Pittsburgh}
+\usecolortheme{dove}
 %\usecolortheme{seahorse}
 %\usefonttheme{structureitalicserif}
 \setbeamercovered{transparent}
@@ -33,10 +33,10 @@
 %\useoutertheme[]{tree}
 
 % title, etc
-\title{The Main Title Naming Key Concepts}
-\subtitle{A subtitle may be shorter and more technical}
+\title{Probabilistic Combination and Filtering of Callers}
+\subtitle{Benchmark Experiment and Machine Learning}
 \author{Attila Gulyas-Kovacs, Chaggai Rosenbluh, Andy Chess}
-\date{Mount Sinai School of Medicine}
+\date{Chess Lab, Mount Sinai}
 
 \begin{document}
 
@@ -45,12 +45,13 @@
 \section{Introduction}
 
 \begin{frame}{Schizophrenia genetics}
-\begin{itemize}
-\item GWAS
-\item highly complex 
-\item de novo mutations
-\item somatic mutations?
-\end{itemize}
+
+\includegraphics<1>[width=1.0\textwidth]{figures/from-others/ripke2014nature-fig1.png}
+
+\only<1>{\tiny Nature.~2014 24;511:421-7}
+
+\includegraphics<2>[width=0.7\textwidth]{figures/from-others/ripke2013natgen-fig1a.jpg}
+\only<2>{\tiny Nat Genet.~2013 45:1150-9}
 \end{frame}
 
 \begin{frame}{Our workflow}
@@ -450,6 +451,24 @@ P(i) = \frac{1}{5} \sum_{j=1}^5 P_j(y_{ij} | \mathbf{x}_{ij})
 \end{frame}
 
 \againframe{precrecall}
+
+\begin{frame}{Summary}
+\begin{itemize}
+\item 5 callers applied to paired sample data
+\item benchmark experiment: labeled callsets
+\begin{itemize}
+\item performance: precision--recall
+\item caller's relative performance depended on alt.~allele freq.
+\item callers aren't directly comparable (default filters)
+\end{itemize}
+\item probabilistic combination and filtering
+\begin{itemize}
+\item \texttt{VariantMetaCaller} trains support vector machines on VCF annotations
+\item manual selection of annotations is in progress 
+\item precision/FDR control 
+\end{itemize}
+\end{itemize}
+\end{frame}
 
 \end{document}
 
